# Katz

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
config/: config.json
config_exemple/: config.json
includes/: http.h  http_helper.h  routes.h
includes/core/: routes.h  server.h
includes/public/: katz.h
includes/utils/: config.h  logging.h
src/: http.c  http_helper.c  katz.c  main.c  routes.c
src/core/: http_helper.c  routes.c  server.c
src/routes/: route_hello.c
src/utils/: config.c  logging.c
tests/integration/: test_server.c
tests/unit/: test_logging.c
